# python-websocket

./: .gitignore  LICENSE.rst  Makefile  README.md  pyproject.toml  ws.py
docs/: index.rst
example/: chat.py  index.html
src/: setup.py
src/wsserver/: __init__.py  api.py  logger.py  wsserver.py
tests/: test_wsserver.py
